# currency-converter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  server.Dockerfile
scripts/: import_eurofxref.py
src/currency_converter_api/: main.py  tables.py
src/currency_converter_api/utils/: currency.py
src/currency_converter_server/: main.py
src/currency_converter_server/templates/: index.html
tests/currency_converter_api/: test_main.py
tests/currency_converter_api/utils/: test_currency.py
tests/currency_converter_server/: test_main.py
